# realtime-stt

backend/: .dockerignore  Dockerfile  app.py  env.py  pyproject.toml  settings.py  stt.py
backend/gemini/: llm.py  tts.py
frontend/: .env.example
frontend/public/: audio-processor.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/hooks/: useAudioPlayer.ts  useAudioRecorder.ts  useConversation.ts  useGenerateSpeech.ts  useWebSocketSTT.ts
frontend/src/types/: conversation.ts
