[project]
name = "stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "google-cloud-speech>=2.34.0",
    "google-genai>=1.46.0",
    "streamlit>=1.39.0",
    "streamlit-audiorecorder>=0.0.6",
    "numpy>=1.26.0",
    "pydub>=0.25.1",
    "sounddevice>=0.4.6",
    "websockets>=12.0",
    "uvicorn>=0.38.0",
]
